--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 <title>
-CBSE School in Gorakhpur, Top Schools in Gorakhpur UP</title>
-<h1>DISMALAR ! STAY AWAY FROM THIVIES!
+.......... School in Gorakhpur, Top Schools in Gorakhpur UP</title>
+<h1>DISMALAR ! STAY AWAY FROM CHOR OR KUTA!
 
 <meta name="description" content="Academic Global School, Gorakhpur is an award winning Best CBSE School in Gorakhpur specialised in preparing students for admission in IITs, Medical colleges and top Law colleges, thus a Top Choice for Parents in Gorakhpur, UP.">
 <meta name="keywords" content="Top School in Gorakhpur, Best School in Gorakhpur, Top CBSE School in Gorakhpur, Top 10 CBSE School in Gorakhpur, Best CBSE School in Gorakhpur, Best IIT JEE Preparation School in Gorakhpur, Best Medical Institute in Gorakhpur, Best IIT Preparation Institute in Gorakhpur">
