--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 <title>
 .......... School in Gorakhpur, Top Schools in Gorakhpur UP</title>
-<h1>DISMALAR ! STAY AWAY FROM CHOR OR KUTA!
+<h1>DISMALAR ! STAY AWAY FROM CHOR ya kuto se!
 
 <meta name="description" content="Academic Global School, Gorakhpur is an award winning Best CBSE School in Gorakhpur specialised in preparing students for admission in IITs, Medical colleges and top Law colleges, thus a Top Choice for Parents in Gorakhpur, UP.">
 <meta name="keywords" content="Top School in Gorakhpur, Best School in Gorakhpur, Top CBSE School in Gorakhpur, Top 10 CBSE School in Gorakhpur, Best CBSE School in Gorakhpur, Best IIT JEE Preparation School in Gorakhpur, Best Medical Institute in Gorakhpur, Best IIT Preparation Institute in Gorakhpur">
@@ -308,7 +308,7 @@ Submit
                                                                 
 
                                                                 <li><a href="http://www.ahgcampuscare.in/" target="_blank" title="Homework and Assignment | AGS">
-                                        Homework and Assignment | AGS</a></li>
+                                        Homework and Assignment jis mei hum apka bhut bura wala kate gye| AGS</a></li>
 
                                                                 
 
